--- a/Tensors in Numpy_Pytorch_Tensorflow/Tensors with Numpy, Pytorch and Keras.ipynb
+++ b/Tensors in Numpy_Pytorch_Tensorflow/Tensors with Numpy, Pytorch and Keras.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "626cec26",
    "metadata": {
     "ExecuteTime": {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "e49e53be",
    "metadata": {
     "ExecuteTime": {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "7249ade7",
    "metadata": {
     "ExecuteTime": {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "54d85810",
    "metadata": {
     "ExecuteTime": {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "ea02ddab",
    "metadata": {
     "ExecuteTime": {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "8c307b21",
    "metadata": {
     "ExecuteTime": {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "691aa9af",
    "metadata": {
     "ExecuteTime": {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "4dc25e4c",
    "metadata": {
     "ExecuteTime": {
@@ -352,14 +352,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0277,  1.5940,  0.0547,  0.9075],\n",
-      "        [-0.0830, -0.7713,  0.2638, -0.4091],\n",
-      "        [ 0.3752,  0.7395,  0.9938, -1.4249]])\n",
+      "tensor([[-0.0884,  0.4143, -0.2753, -0.1001],\n",
+      "        [ 0.9111,  0.2912,  0.2470, -0.6821],\n",
+      "        [-1.0794,  0.3863, -1.3502, -1.4499]])\n",
       "\n",
       "tf.Tensor(\n",
-      "[[-0.6559008  -0.7705256   0.64018154 -1.7344484 ]\n",
-      " [ 0.01427678 -0.566826    0.09488212 -2.305249  ]\n",
-      " [ 1.2057362   1.2659192   0.8795296   1.6820922 ]], shape=(3, 4), dtype=float32)\n"
+      "[[ 1.1761676  -0.44902146  0.01282975 -0.53390586]\n",
+      " [ 1.2215451   0.5079906   0.8646649   0.26759952]\n",
+      " [-0.5592013   1.9468052   0.02869357  1.5001091 ]], shape=(3, 4), dtype=float32)\n"
      ]
     }
    ],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "0b7041b2",
    "metadata": {
     "ExecuteTime": {
@@ -388,14 +388,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2805, 0.2310, 0.7696, 0.9047],\n",
-      "        [0.3666, 0.7605, 0.1266, 0.0117],\n",
-      "        [0.1890, 0.5101, 0.8271, 0.3158]])\n",
+      "tensor([[0.7273, 0.6600, 0.5941, 0.3361],\n",
+      "        [0.7445, 0.6786, 0.7258, 0.0537],\n",
+      "        [0.9504, 0.1306, 0.7365, 0.3820]])\n",
       "\n",
       "tf.Tensor(\n",
-      "[[0.13370037 0.24581933 0.5363015  0.454782  ]\n",
-      " [0.8107952  0.7274295  0.51091313 0.36327183]\n",
-      " [0.83478    0.67665136 0.57968926 0.16813481]], shape=(3, 4), dtype=float32)\n"
+      "[[0.41093957 0.3930148  0.8412837  0.5678446 ]\n",
+      " [0.3419721  0.8700266  0.199965   0.83861387]\n",
+      " [0.12003505 0.9622401  0.69031644 0.07538974]], shape=(3, 4), dtype=float32)\n"
      ]
     }
    ],
@@ -409,10 +409,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "87cc94ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 4), dtype=int32, numpy=\n",
+       "array([[2, 1, 4, 3],\n",
+       "       [1, 2, 3, 4],\n",
+       "       [4, 3, 2, 1]])>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.tensor([[2, 1, 4, 3], [1, 2, 3, 4], [4, 3, 2, 1]])\n",
     "tf.constant([[2, 1, 4, 3], [1, 2, 3, 4], [4, 3, 2, 1]])"
@@ -420,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "id": "ef412f87",
    "metadata": {
     "ExecuteTime": {
@@ -446,7 +460,7 @@
        "        [ 8.,  9., 10., 11.]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "f82db7a6",
    "metadata": {
     "ExecuteTime": {
@@ -489,7 +503,7 @@
        "       [ 8.,  9., 10., 11.]], dtype=float32)>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "id": "e8639254",
    "metadata": {
     "ExecuteTime": {
@@ -542,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "id": "e10a65cb",
    "metadata": {
     "ExecuteTime": {
@@ -581,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "id": "c694c4db",
    "metadata": {
     "ExecuteTime": {
@@ -594,20 +608,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 3.,  4.,  6., 10.]) tensor([-1.,  0.,  2.,  6.]) tensor([ 2.,  4.,  8., 16.]) tensor([0.5000, 1.0000, 2.0000, 4.0000]) tensor([ 1.,  4., 16., 64.])\n",
+      "tensor([ 3,  4,  6, 10]) tensor([-1,  0,  2,  6]) tensor([ 2,  4,  8, 16]) tensor([0.5000, 1.0000, 2.0000, 4.0000]) tensor([ 1,  4, 16, 64])\n",
       "\n",
-      "tf.Tensor([ 3.  4.  6. 10.], shape=(4,), dtype=float32) tf.Tensor([-1.  0.  2.  6.], shape=(4,), dtype=float32) tf.Tensor([ 2.  4.  8. 16.], shape=(4,), dtype=float32) tf.Tensor([0.5 1.  2.  4. ], shape=(4,), dtype=float32) tf.Tensor([ 1.  4. 16. 64.], shape=(4,), dtype=float32)\n"
+      "tf.Tensor([ 3  4  6 10], shape=(4,), dtype=int32) tf.Tensor([-1  0  2  6], shape=(4,), dtype=int32) tf.Tensor([ 2  4  8 16], shape=(4,), dtype=int32) tf.Tensor([0.5 1.  2.  4. ], shape=(4,), dtype=float64) tf.Tensor([ 1  4 16 64], shape=(4,), dtype=int32)\n"
      ]
     }
    ],
    "source": [
-    "x = torch.tensor([1.0, 2, 4, 8])\n",
+    "x = torch.tensor([1, 2, 4, 8])\n",
     "y = torch.tensor([2, 2, 2, 2])\n",
     "print(x + y, x - y, x * y, x / y, x ** y)\n",
     "print()\n",
-    "x_tf = tf.constant([1.0, 2, 4, 8])\n",
-    "y_tf = tf.constant([2.0, 2, 2, 2])\n",
+    "x_tf = tf.constant([1, 2, 4, 8])\n",
+    "y_tf = tf.constant([2, 2, 2, 2])\n",
     "print(x_tf + y_tf, x_tf - y_tf, x_tf * y_tf, x_tf / y_tf, x_tf ** y_tf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "eaba9e99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 2,  4,  8, 16])\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = torch.multiply(x,y)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "2f96482d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([ 2  4  8 16], shape=(4,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "z_tf = tf.math.multiply(x_tf, y_tf)\n",
+    "print(z_tf)"
    ]
   },
   {
@@ -620,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "id": "ea42c0cb",
    "metadata": {
     "ExecuteTime": {
@@ -643,7 +695,7 @@
        "         [ 8.,  9., 10., 11.,  4.,  3.,  2.,  1.]]))"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "id": "063d1c2e",
    "metadata": {
     "ExecuteTime": {
@@ -677,7 +729,7 @@
        "         [ 4.,  3.,  2.,  1.]]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "id": "f2c688fd",
    "metadata": {
     "ExecuteTime": {
@@ -710,7 +762,7 @@
        "         [ 4.,  3.,  2.,  1.]]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "id": "32229e16",
    "metadata": {
     "ExecuteTime": {
@@ -746,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "id": "ef82c7fe",
    "metadata": {
     "ExecuteTime": {
@@ -771,7 +823,7 @@
        "        [ 8.,  9., 10., 11.,  4.,  3.,  2.,  1.]], dtype=float32)>)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "id": "9f329aad",
    "metadata": {
     "ExecuteTime": {
@@ -809,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "id": "46941ce8",
    "metadata": {
     "ExecuteTime": {
@@ -833,11 +885,165 @@
     "                              torch.arange(12, dtype=torch.float32).reshape((4,3)))\n",
     "print(x_matmul_torch)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "3f1d7457",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1502, 0.4867, 0.6739, 0.3440, 0.9881],\n",
+      "        [0.1190, 0.7678, 0.8018, 0.2710, 0.8819],\n",
+      "        [0.0239, 0.8041, 0.3032, 0.4898, 0.4264]])\n",
+      "tensor([[0.1502, 0.1190, 0.0239],\n",
+      "        [0.4867, 0.7678, 0.8041],\n",
+      "        [0.6739, 0.8018, 0.3032],\n",
+      "        [0.3440, 0.2710, 0.4898],\n",
+      "        [0.9881, 0.8819, 0.4264]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tch = torch.rand(3,5)\n",
+    "tch_transpose = torch.transpose(tch,0,1)\n",
+    "print(tch)\n",
+    "print(tch_transpose)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aec1b5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d7fd39b",
+   "metadata": {},
+   "source": [
+    "## Remove unnecessary dimensions in Pytorch / Tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "12853e8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 1, 2]) ---> torch.Size([3, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pytorch\n",
+    "t = torch.zeros(3,1,2)\n",
+    "\n",
+    "t_sqz = torch.squeeze(t,1)\n",
+    "print(t.shape,'--->', t_sqz.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "6d3ee6db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0., 0.]],\n",
+      "\n",
+      "        [[0., 0.]],\n",
+      "\n",
+      "        [[0., 0.]]])\n",
+      "tensor([[0., 0.],\n",
+      "        [0., 0.],\n",
+      "        [0., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t)\n",
+    "print(t_sqz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "8b9a11d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[[0.]\n",
+      "  [0.]\n",
+      "  [0.]]\n",
+      "\n",
+      " [[0.]\n",
+      "  [0.]\n",
+      "  [0.]]\n",
+      "\n",
+      " [[0.]\n",
+      "  [0.]\n",
+      "  [0.]]], shape=(3, 3, 1), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_zeros_tf = tf.zeros((3,3,1))\n",
+    "print(x_zeros_tf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "1b019c8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]], shape=(3, 3), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://www.tensorflow.org/api_docs/python/tf/squeeze\n",
+    "# Removes dimensions of size 1 from the shape of a tensor.\n",
+    "b = tf.squeeze(x_zeros_tf)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a321aaeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('mlops-course')",
    "language": "python",
    "name": "python3"
   },
@@ -851,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
@@ -894,6 +1100,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "19cb93b33ae33a86621d5a429b724db7a98b1d2edee99c26e8645cea2eb5ac8e"
+   }
   }
  },
  "nbformat": 4,
