--- a/Tensors in Numpy_Pytorch_Tensorflow/Tensors with Numpy, Pytorch and Keras.ipynb
+++ b/Tensors in Numpy_Pytorch_Tensorflow/Tensors with Numpy, Pytorch and Keras.ipynb
@@ -5,7 +5,7 @@
    "id": "ff093774",
    "metadata": {},
    "source": [
-    "<b> This notebook is a compilation of simple samples around the gears of Machine Learning and Deep Learning operations, nothing else that algebra operations using matrix or tensor operations, with Numpy, Pytorch and Keras / Tensorflow in order to show the similarities and differences around them."
+    "### <b> This notebook is a compilation of simple samples around the gears of Machine Learning and Deep Learning operations, nothing else that algebra operations using matrix or tensor operations, with Numpy, Pytorch and Keras / Tensorflow in order to show the similarities and differences around them."
    ]
   },
   {
