--- a/Tensors in Numpy_Pytorch_Tensorflow/Readme
+++ b/Tensors in Numpy_Pytorch_Tensorflow/Readme
@@ -1,6 +1,6 @@
 Basic operations with arrays and tensors in Numpy, Pytorch, Tensorflow and your own Tensor Classes
 
-<b> Refs. 
+Refs. 
 - "Hands-On Machine Learning with Scikit-Learn and, Keras and Tensorflow". A. Gerón
 - "Deep Learning with Python 2nd Ed". F. Chollet
 - "Machine Learning with Pytorch and Scikit-Learn". S. Raschka, Y. (Hayden) liu, V. Mirjaili
