--- a/Tensors in Numpy_Pytorch_Tensorflow/Building_Pipelines_in_Pytorch_and_Tensorflow.ipynb
+++ b/Tensors in Numpy_Pytorch_Tensorflow/Building_Pipelines_in_Pytorch_and_Tensorflow.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,19 +191,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "batch 1: x: tensor([[0.9593, 0.3904, 0.6009],\n",
-      "        [0.2566, 0.7936, 0.9408]]) y: tensor([[0.7411, 0.4294],\n",
+      "batch 1: x: tensor([[0.8823, 0.9150, 0.3829],\n",
+      "        [0.2566, 0.7936, 0.9408]]) y: tensor([[0.8694, 0.5677],\n",
       "        [0.8854, 0.5739]])\n",
       "batch 2: x: tensor([[0.1332, 0.9346, 0.5936],\n",
-      "        [0.8823, 0.9150, 0.3829]]) y: tensor([[0.2666, 0.6274],\n",
-      "        [0.8694, 0.5677]])\n"
+      "        [0.9593, 0.3904, 0.6009]]) y: tensor([[0.2666, 0.6274],\n",
+      "        [0.7411, 0.4294]])\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -228,15 +228,15 @@
      "text": [
       "epoch 1\n",
       "batch 1: x: tensor([[0.8823, 0.9150, 0.3829],\n",
-      "        [0.9593, 0.3904, 0.6009]]) y: tensor([[0.8694, 0.5677],\n",
-      "        [0.7411, 0.4294]])\n",
-      "batch 2: x: tensor([[0.1332, 0.9346, 0.5936],\n",
-      "        [0.2566, 0.7936, 0.9408]]) y: tensor([[0.2666, 0.6274],\n",
+      "        [0.2566, 0.7936, 0.9408]]) y: tensor([[0.8694, 0.5677],\n",
       "        [0.8854, 0.5739]])\n",
-      "epoch 2\n",
-      "batch 1: x: tensor([[0.2566, 0.7936, 0.9408],\n",
-      "        [0.9593, 0.3904, 0.6009]]) y: tensor([[0.8854, 0.5739],\n",
+      "batch 2: x: tensor([[0.1332, 0.9346, 0.5936],\n",
+      "        [0.9593, 0.3904, 0.6009]]) y: tensor([[0.2666, 0.6274],\n",
       "        [0.7411, 0.4294]])\n",
+      "epoch 2\n",
+      "batch 1: x: tensor([[0.9593, 0.3904, 0.6009],\n",
+      "        [0.2566, 0.7936, 0.9408]]) y: tensor([[0.7411, 0.4294],\n",
+      "        [0.8854, 0.5739]])\n",
       "batch 2: x: tensor([[0.1332, 0.9346, 0.5936],\n",
       "        [0.8823, 0.9150, 0.3829]]) y: tensor([[0.2666, 0.6274],\n",
       "        [0.8694, 0.5677]])\n"
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -363,6 +363,122 @@
    "source": [
     "for item in dataset.take(2):\n",
     "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Joined datasets in TF Method 1 with zip\n",
+      "0 (2, 3) [1 2]\n",
+      "1 (2, 3) [3 0]\n",
+      "2 (2, 3) [1 3]\n",
+      "3 (2, 3) [0 2]\n",
+      "4 (2, 3) [2 1]\n",
+      "5 (2, 3) [3 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(1)\n",
+    "\n",
+    "t_x = tf.random.uniform([4, 3], dtype=tf.float32)\n",
+    "t_y = tf.range(4)\n",
+    "\n",
+    "\n",
+    "ds_x = tf.data.Dataset.from_tensor_slices(t_x)\n",
+    "ds_y = tf.data.Dataset.from_tensor_slices(t_y)\n",
+    "   \n",
+    "print(' Joined datasets in TF Method 1 with zip') \n",
+    "ds_joint = tf.data.Dataset.zip((ds_x, ds_y))\n",
+    "\n",
+    "## Order 1: shuffle -> batch -> repeat\n",
+    "ds = ds_joint.shuffle(4).batch(2).repeat(3)\n",
+    "\n",
+    "for i,(batch_x, batch_y) in enumerate(ds):\n",
+    "    print(i, batch_x.shape, batch_y.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 (2, 3) [0 1]\n",
+      "1 (2, 3) [2 3]\n",
+      "2 (2, 3) [0 1]\n",
+      "3 (2, 3) [2 3]\n",
+      "4 (2, 3) [2 3]\n",
+      "5 (2, 3) [0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Order 2: batch -> shuffle -> repeat\n",
+    "ds = ds_joint.batch(2).shuffle(4).repeat(3)\n",
+    "\n",
+    "for i,(batch_x, batch_y) in enumerate(ds):\n",
+    "    print(i, batch_x.shape, batch_y.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Joined datasets in TF Method 1 with zip\n",
+      "  x:  [0.16513085 0.9014813  0.6309742 ]   y:  0\n",
+      "  x:  [0.4345461  0.29193902 0.64250207]   y:  1\n",
+      "  x:  [0.9757855  0.43509948 0.6601019 ]   y:  2\n",
+      "  x:  [0.60489583 0.6366315  0.6144488 ]   y:  3\n",
+      " Joined datasets in TF Method 2\n",
+      "  x:  [0.16513085 0.9014813  0.6309742 ]   y:  0\n",
+      "  x:  [0.4345461  0.29193902 0.64250207]   y:  1\n",
+      "  x:  [0.9757855  0.43509948 0.6601019 ]   y:  2\n",
+      "  x:  [0.60489583 0.6366315  0.6144488 ]   y:  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Joint two Datasets in TF\n",
+    "\n",
+    "tf.random.set_seed(1)\n",
+    "\n",
+    "t_x = tf.random.uniform([4, 3], dtype=tf.float32)\n",
+    "t_y = tf.range(4)\n",
+    "\n",
+    "# Method 1\n",
+    "\n",
+    "ds_x = tf.data.Dataset.from_tensor_slices(t_x)\n",
+    "ds_y = tf.data.Dataset.from_tensor_slices(t_y)\n",
+    "   \n",
+    "print(' Joined datasets in TF Method 1 with zip') \n",
+    "ds_joint = tf.data.Dataset.zip((ds_x, ds_y))\n",
+    "\n",
+    "for example in ds_joint:\n",
+    "    print('  x: ', example[0].numpy(), \n",
+    "          '  y: ', example[1].numpy())\n",
+    "    \n",
+    "   \n",
+    "print(' Joined datasets in TF Method 2') \n",
+    "ds_joint = tf.data.Dataset.from_tensor_slices((t_x, t_y))\n",
+    "\n",
+    "for example in ds_joint:\n",
+    "    print('  x: ', example[0].numpy(), \n",
+    "          '  y: ', example[1].numpy())"
    ]
   }
  ],
