--- a/Tensors in Numpy_Pytorch_Tensorflow/Tensors with Numpy, Pytorch and Keras.ipynb
+++ b/Tensors in Numpy_Pytorch_Tensorflow/Tensors with Numpy, Pytorch and Keras.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "626cec26",
    "metadata": {
     "ExecuteTime": {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e49e53be",
    "metadata": {
     "ExecuteTime": {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7249ade7",
    "metadata": {
     "ExecuteTime": {
@@ -210,6 +210,32 @@
     "t_b = torch.from_numpy(b)\n",
     "print(\"Converted numpy array into tensor in Tensorflow:\")\n",
     "print(t_b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "772d74a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([1 2 3], shape=(3,), dtype=int32)\n",
+      "tf.Tensor([4 5 6], shape=(3,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3], dtype=np.int32)\n",
+    "b = [4, 5, 6]\n",
+    "\n",
+    "t_a = tf.convert_to_tensor(a)\n",
+    "t_b = tf.convert_to_tensor(b)\n",
+    "\n",
+    "print(t_a)\n",
+    "print(t_b)"
    ]
   },
   {
@@ -352,14 +378,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0884,  0.4143, -0.2753, -0.1001],\n",
-      "        [ 0.9111,  0.2912,  0.2470, -0.6821],\n",
-      "        [-1.0794,  0.3863, -1.3502, -1.4499]])\n",
+      "tensor([[-0.6402,  0.2987,  0.0482,  0.5774],\n",
+      "        [ 0.3586,  0.8646,  1.2366, -0.7263],\n",
+      "        [ 0.2134,  1.9923,  0.5975, -1.6612]])\n",
       "\n",
       "tf.Tensor(\n",
-      "[[ 1.1761676  -0.44902146  0.01282975 -0.53390586]\n",
-      " [ 1.2215451   0.5079906   0.8646649   0.26759952]\n",
-      " [-0.5592013   1.9468052   0.02869357  1.5001091 ]], shape=(3, 4), dtype=float32)\n"
+      "[[-0.2628621  -1.9058403   0.3859688   0.45301744]\n",
+      " [ 0.42660347 -1.44864     0.14230877  1.2757741 ]\n",
+      " [-2.1917777   0.55083305  0.38200408  0.2341218 ]], shape=(3, 4), dtype=float32)\n"
      ]
     }
    ],
@@ -388,14 +414,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.7273, 0.6600, 0.5941, 0.3361],\n",
-      "        [0.7445, 0.6786, 0.7258, 0.0537],\n",
-      "        [0.9504, 0.1306, 0.7365, 0.3820]])\n",
+      "tensor([[0.2304, 0.5877, 0.2254, 0.6953],\n",
+      "        [0.4117, 0.7542, 0.0927, 0.0224],\n",
+      "        [0.7839, 0.4220, 0.3701, 0.8745]])\n",
       "\n",
       "tf.Tensor(\n",
-      "[[0.41093957 0.3930148  0.8412837  0.5678446 ]\n",
-      " [0.3419721  0.8700266  0.199965   0.83861387]\n",
-      " [0.12003505 0.9622401  0.69031644 0.07538974]], shape=(3, 4), dtype=float32)\n"
+      "[[0.60275805 0.9440664  0.03447676 0.16630065]\n",
+      " [0.07552934 0.99118483 0.96084    0.09490395]\n",
+      " [0.97335565 0.27851713 0.7037016  0.22254169]], shape=(3, 4), dtype=float32)\n"
      ]
     }
    ],
@@ -595,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "id": "c694c4db",
    "metadata": {
     "ExecuteTime": {
@@ -626,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "id": "eaba9e99",
    "metadata": {},
    "outputs": [
@@ -645,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "id": "2f96482d",
    "metadata": {},
    "outputs": [
@@ -672,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "ea42c0cb",
    "metadata": {
     "ExecuteTime": {
@@ -695,7 +721,7 @@
        "         [ 8.,  9., 10., 11.,  4.,  3.,  2.,  1.]]))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "063d1c2e",
    "metadata": {
     "ExecuteTime": {
@@ -729,7 +755,7 @@
        "         [ 4.,  3.,  2.,  1.]]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "f2c688fd",
    "metadata": {
     "ExecuteTime": {
@@ -762,7 +788,7 @@
        "         [ 4.,  3.,  2.,  1.]]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "32229e16",
    "metadata": {
     "ExecuteTime": {
@@ -792,13 +818,13 @@
     }
    ],
    "source": [
-    "torch_splits = torch.chunk(X, 2)\n",
+    "torch_splits = torch.chunk(X, 2) # Provide the number of splits\n",
     "print(torch_splits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "ef82c7fe",
    "metadata": {
     "ExecuteTime": {
@@ -823,7 +849,7 @@
        "        [ 8.,  9., 10., 11.,  4.,  3.,  2.,  1.]], dtype=float32)>)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +863,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
+   "id": "90cff8a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.16513085 0.9014813  0.6309742  0.4345461  0.29193902 0.64250207]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.16513085, 0.9014813 ], dtype=float32),\n",
+       " array([0.6309742, 0.4345461], dtype=float32),\n",
+       " array([0.29193902, 0.64250207], dtype=float32)]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.random.set_seed(1)\n",
+    "\n",
+    "t = tf.random.uniform((6,))\n",
+    "\n",
+    "print(t.numpy())\n",
+    "\n",
+    "t_splits = tf.split(t, 3) # In tensorflow providing the number of splits\n",
+    "\n",
+    "[item.numpy() for item in t_splits]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "82304d7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.7576, 0.2793, 0.4031, 0.7347, 0.0293])\n",
+      "Splits of defined size in Pytorch\n",
+      "[0.16513085 0.9014813  0.6309742  0.4345461  0.29193902]\n",
+      "\n",
+      "Splits of defined size in Tensorflow\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.16513085, 0.9014813 , 0.6309742 ], dtype=float32),\n",
+       " array([0.4345461 , 0.29193902], dtype=float32)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Providing the sizes of the splits\n",
+    "\n",
+    "# Pytorch\n",
+    "torch.manual_seed(1)\n",
+    "t_torch = torch.rand(5)\n",
+    "print(t_torch)\n",
+    "\n",
+    "torch_splits = torch.split(t_torch, split_size_or_sections = [3,2])\n",
+    "\n",
+    "print('Splits of defined size in Pytorch')\n",
+    "[item.numpy() for item in torch_splits]\n",
+    "\n",
+    "# Tensorflow\n",
+    "\n",
+    "tf.random.set_seed(1)\n",
+    "t = tf.random.uniform((5,))\n",
+    "\n",
+    "print(t.numpy())\n",
+    "\n",
+    "tf_splits = tf.split(t, num_or_size_splits=[3, 2])\n",
+    "print()\n",
+    "print('Splits of defined size in Tensorflow')\n",
+    "[item.numpy() for item in tf_splits]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2601aa7e",
+   "metadata": {},
+   "source": [
+    "## Mathematical Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "9f329aad",
    "metadata": {
     "ExecuteTime": {
@@ -861,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "46941ce8",
    "metadata": {
     "ExecuteTime": {
@@ -888,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "id": "3f1d7457",
    "metadata": {},
    "outputs": [
@@ -896,14 +1023,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.1502, 0.4867, 0.6739, 0.3440, 0.9881],\n",
-      "        [0.1190, 0.7678, 0.8018, 0.2710, 0.8819],\n",
-      "        [0.0239, 0.8041, 0.3032, 0.4898, 0.4264]])\n",
-      "tensor([[0.1502, 0.1190, 0.0239],\n",
-      "        [0.4867, 0.7678, 0.8041],\n",
-      "        [0.6739, 0.8018, 0.3032],\n",
-      "        [0.3440, 0.2710, 0.4898],\n",
-      "        [0.9881, 0.8819, 0.4264]])\n"
+      "tensor([[0.7030, 0.4794, 0.9141, 0.9352, 0.7344],\n",
+      "        [0.8989, 0.9822, 0.8694, 0.1103, 0.3480],\n",
+      "        [0.8712, 0.3092, 0.0419, 0.6437, 0.5734]])\n",
+      "tensor([[0.7030, 0.8989, 0.8712],\n",
+      "        [0.4794, 0.9822, 0.3092],\n",
+      "        [0.9141, 0.8694, 0.0419],\n",
+      "        [0.9352, 0.1103, 0.6437],\n",
+      "        [0.7344, 0.3480, 0.5734]])\n"
      ]
     }
    ],
@@ -924,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "id": "12853e8d",
    "metadata": {},
    "outputs": [
@@ -946,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "id": "6d3ee6db",
    "metadata": {},
    "outputs": [
@@ -972,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "id": "8b9a11d4",
    "metadata": {},
    "outputs": [
@@ -1002,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "id": "1b019c8d",
    "metadata": {},
    "outputs": [
